...
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          title: "Heute",
          tabBarButtonTestID: "tab-today",
          tabBarIcon: ({ color, size }) => <Ionicons color={color} name="home-outline" size={size} />
        }}
      />
      <Tabs.Screen
        name="ansitze"
        options={{
...
        }}
      />
      <Tabs.Screen
        name="fallwild"
        options={{
          title: "Fallwild",
          tabBarButtonTestID: "tab-fallwild",
          tabBarIcon: ({ color, size }) => <Ionicons color={color} name="camera-outline" size={size} />
        }}
      />
      <Tabs.Screen
        name="mehr"
        options={{
...
